--- a/form.html
+++ b/form.html
@@ -1,74 +1,76 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>login form</title>
-    <link rel="stylesheet" href="form.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="style1.css" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Bree+Serif&family=Roboto:wght@300;400;500;700&display=swap"
+        rel="stylesheet">
+
+</head>
+
+<body>
     <div class="box-size">
-      <div class="hp">
         <div class="hp">
-          <img src="form.jfif" width="60px" />
-          <h1>PLURALSIGHT</h1>
+            <div class="hp">
+                <img src="form.jfif" width="60px" />
+                <h1>PLURALSIGHT</h1>
 
-          <div class="pk">
-            <p>Let's create the future .</p>
-            <h4>Together</h4>
-          </div>
+                <div class="pk">
+                    <p>Let's create the future .</p>
+                    <h4>Together</h4>
+                </div>
 
-          <div class="right">
-            <button>start a FREE 10-day trial</button>
-          </div>
-          <form class="form">
-            <label>Email ur UserName</label>
-            <br />
+                <div class="right">
+                    <button>start a FREE 10-day trial</button>
+                </div>
+                <form class="form">
+                    <label>Email or UserName</label>
+                    <br />
 
-            <input type="text" value="" />
-            <br />
-            <br />
-            <label>password</label>
-            <br />
-            <input type="password" value="" />
-            <br />
-            <br />
-            <input
-              id="signin"
-              type="submit"
-              value="signin"
-              placeholder="sign in"
-            />
+                    <input type="text" value="" />
+                    <br />
+                    <br />
+                    <label>password</label>
+                    <br />
+                    <input type="password" value="" />
+                    <br />
+                    <br />
+                    <input id="login" type="submit" value="login" placeholder="login" />
 
-            <br />
-            <br />
-            <p class="p"><a href="flower.jpeg">forgot password</a></p>
-            <br />
-            <br />
-            <label>sign in with company or school</label>
+                    <br/>
+                    <br/>
+                    <p class="p"><a href="flower.jpeg">forgot password</a></p>
+                    <br />
+                    <br />
+                    <label>sign in with company or school</label>
 
-            <div class="hori">
-              <hr />
+                    <div class="hori">
+                        <hr />
+                    </div>
+
+                    <div class="hr">
+                        <hr />
+                    </div>
+
+                    <div class="h2">
+                        <h2>or</h2>
+                    </div>
+                    <br />
+                    <input type="text" name="name" alue="create an account" />
+                    <br />
+                    <br />
+                    <div class="para">
+                        <p>
+                            Create an account Copyright © 2004 - 2019 Pluralsight LLC. All
+                            rights reserved. Terms of Use | Privacy Policy
+                        </p>
+                    </div>
+                </form>
             </div>
-
-            <div class="hr">
-              <hr />
-            </div>
-
-            <div class="h2">
-              <h2>or</h2>
-            </div>
-            <br />
-            <input type="text" name="name" alue="create an account" />
-            <br />
-            <br />
-            <div class="para">
-              <p>
-                Create an account Copyright © 2004 - 2019 Pluralsight LLC. All
-                rights reserved. Terms of Use | Privacy Policy
-              </p>
-            </div>
-          </form>
         </div>
-      </div>
     </div>
-  </body>
+</body>
+
 </html>
